--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
   <body>
     <div class="todo-app__matrix-img">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="matrix-img">
       <a class="todo-app__more-info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="todo-app__centered-main-page-element">
@@ -25,14 +25,14 @@
           <label class="todo-app__task">Pay Bills</label>
           <input type="text" class="todo-app__task">
           <button class="todo-app__edit">Edit</button>
-          <button class="todo-app__delete"><img src="./remove.svg"></button>
+          <button class="todo-app__delete"><img src="./remove.svg" alt="remove"></button>
         </li>
         <li class="todo-app__edit-mode">
           <input type="checkbox">
           <label class="todo-app__task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="todo-app__task">
           <button class="todo-app__edit">Save</button>
-          <button class="todo-app__delete"><img src="./remove.svg"></button>
+          <button class="todo-app__delete"><img src="./remove.svg" alt="remove"></button>
         </li>
       </ul>
       <h3>Completed</h3>
@@ -42,7 +42,7 @@
           <label class="todo-app__task">See the Doctor</label>
           <input type="text" class="todo-app__task">
           <button class="todo-app__edit">Edit</button>
-          <button class="todo-app__delete"><img src="./remove.svg"></button>
+          <button class="todo-app__delete"><img src="./remove.svg" alt="remove"></button>
         </li>
       </ul>
     </div>
