--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
   <body>
     <div class="todo-app__matrix-img">
@@ -48,6 +48,6 @@
         </li>
       </ul>
     </div>
-    <script src="app.js"></script>
-</body>
+    <script src="/app.js"></script>
+  </body>
 </html>
